# celeste-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/celeste_core/: __init__.py  validation.py
src/celeste_core/base/: audio_client.py  client.py  document_client.py  embedder.py  image_editor.py  image_enhancer.py  image_generator.py  reranker.py  tts_client.py  video_client.py
src/celeste_core/config/: settings.py
src/celeste_core/enums/: capability.py  providers.py
src/celeste_core/models/: catalog.py  model.py  registry.py
src/celeste_core/types/: audio.py  image.py  response.py  video.py
tests/: test_model_catalog.py  test_settings.py
